@@ -7,62 +7,82 @@ import static tool.GenerateAST.*;
 //Each grammar rule becomes a method inside this new class:
 // expression → equality ;
 // equality → comparison ( ( "!=" | "==" ) comparison )* ;
-public class Parser {
+import java.util.ArrayList;
+//< Statements and State parser-imports
+//> Control Flow import-arrays
+import java.util.Arrays;
+//< Control Flow import-arrays
+import java.util.List;
 
-    //Like the scanner, the parser consumes a flat input sequence
-    //only now we’re reading tokens instead of characters
-    // We store the list of tokens and use current to point to the next token eagerly waiting to be parsed.
 
-    private static class ParseError extends RuntimeException {
-    }
 
+class Parser {
+    //> parse-error
+    private static class ParseError extends RuntimeException {}
+
+    //< parse-error
     private final List<Token> tokens;
-
-    private boolean inLoop = false;
     private int current = 0;
-
-    List<Stmt> parse() {
-        List<Stmt> statements = new ArrayList<>();
-        while (!isAtEnd()) {
-            statements.add(declaration());
-        }
-        return statements;
-    }
 
     Parser(List<Token> tokens) {
         this.tokens = tokens;
     }
-
-    Expr parse() {
+    /* Parsing Expressions parse < Statements and State parse
+      Expr parse() {
         try {
-            return expression();
+          return expression();
         } catch (ParseError error) {
-            return null;
+          return null;
         }
-    }
+      }
+    */
+//> Statements and State parse
+    List<Stmt> parse() {
+        List<Stmt> statements = new ArrayList<>();
+        while (!isAtEnd()) {
+/* Statements and State parse < Statements and State parse-declaration
+      statements.add(statement());
+*/
+//> parse-declaration
+            statements.add(declaration());
+//< parse-declaration
+        }
 
-    // Each method for parsing a grammar rule produces a syntax tree for that rule and returns it to
-// the caller. When the body of the rule contains a nonterminal—a reference to another rule—we call
-// that other rule’s method.
+        return statements; // [parse-error-handling]
+    }
+    //< Statements and State parse
+//> expression
     private Expr expression() {
-        return equality();
-
+/* Parsing Expressions expression < Statements and State expression
+    return equality();
+*/
+//> Statements and State expression
+        return assignment();
+//< Statements and State expression
     }
-
+    //< expression
+//> Statements and State declaration
     private Stmt declaration() {
         try {
-            if (match(FUN)) return function("function");
+//> Classes match-class
             if (match(CLASS)) return classDeclaration();
+//< Classes match-class
+//> Functions match-fun
+            if (match(FUN)) return function("function");
+//< Functions match-fun
             if (match(VAR)) return varDeclaration();
+
             return statement();
         } catch (ParseError error) {
             synchronize();
             return null;
         }
     }
-
+    //< Statements and State declaration
+//> Classes parse-class-declaration
     private Stmt classDeclaration() {
         Token name = consume(IDENTIFIER, "Expect class name.");
+//> Inheritance parse-superclass
 
         Expr.Variable superclass = null;
         if (match(LESS)) {
@@ -70,6 +90,7 @@ public class Parser {
             superclass = new Expr.Variable(previous());
         }
 
+//< Inheritance parse-superclass
         consume(LEFT_BRACE, "Expect '{' before class body.");
 
         List<Stmt.Function> methods = new ArrayList<>();
@@ -79,32 +100,44 @@ public class Parser {
 
         consume(RIGHT_BRACE, "Expect '}' after class body.");
 
+/* Classes parse-class-declaration < Inheritance construct-class-ast
+    return new Stmt.Class(name, methods);
+*/
+//> Inheritance construct-class-ast
         return new Stmt.Class(name, superclass, methods);
+//< Inheritance construct-class-ast
     }
-
+    //< Classes parse-class-declaration
+//> Statements and State parse-statement
     private Stmt statement() {
+//> Control Flow match-for
         if (match(FOR)) return forStatement();
+//< Control Flow match-for
+//> Control Flow match-if
         if (match(IF)) return ifStatement();
+//< Control Flow match-if
         if (match(PRINT)) return printStatement();
+//> Functions match-return
         if (match(RETURN)) return returnStatement();
+//< Functions match-return
+//> Control Flow match-while
         if (match(WHILE)) return whileStatement();
+//< Control Flow match-while
+//> parse-block
         if (match(LEFT_BRACE)) return new Stmt.Block(block());
-        //break challenge
-        if (match(BREAK)) return breakStatement();
+//< parse-block
+
         return expressionStatement();
     }
-
-    private Stmt breakStatement() {
-        if (!inLoop) {
-            throw error(previous(), "Cannot use 'break' outside of a loop.");
-        }
-        consume(SEMICOLON, "Expect ';' after 'break'.");
-        return new Stmt.Break();
-    }
-
-
+    //< Statements and State parse-statement
+//> Control Flow for-statement
     private Stmt forStatement() {
         consume(LEFT_PAREN, "Expect '(' after 'for'.");
+
+/* Control Flow for-statement < Control Flow for-initializer
+    // More here...
+*/
+//> for-initializer
         Stmt initializer;
         if (match(SEMICOLON)) {
             initializer = null;
@@ -113,158 +146,208 @@ public class Parser {
         } else {
             initializer = expressionStatement();
         }
+//< for-initializer
+//> for-condition
+
         Expr condition = null;
         if (!check(SEMICOLON)) {
             condition = expression();
         }
         consume(SEMICOLON, "Expect ';' after loop condition.");
+//< for-condition
+//> for-increment
+
         Expr increment = null;
         if (!check(RIGHT_PAREN)) {
             increment = expression();
         }
         consume(RIGHT_PAREN, "Expect ')' after for clauses.");
+//< for-increment
+//> for-body
         Stmt body = statement();
+
+//> for-desugar-increment
         if (increment != null) {
             body = new Stmt.Block(
-                    List.of(
+                    Arrays.asList(
                             body,
-                            new Stmt.Expression(increment)
-                    )
-            );
+                            new Stmt.Expression(increment)));
         }
+
+//< for-desugar-increment
+//> for-desugar-condition
         if (condition == null) condition = new Expr.Literal(true);
         body = new Stmt.While(condition, body);
-        if (initializer != null) {
-            body = new Stmt.Block(
-                    List.of(
-                            initializer,
-                            body
-                    )
-            );
-        }
-        return body;
-    }
 
+//< for-desugar-condition
+//> for-desugar-initializer
+        if (initializer != null) {
+            body = new Stmt.Block(Arrays.asList(initializer, body));
+        }
+
+//< for-desugar-initializer
+        return body;
+//< for-body
+    }
+    //< Control Flow for-statement
+//> Control Flow if-statement
     private Stmt ifStatement() {
         consume(LEFT_PAREN, "Expect '(' after 'if'.");
         Expr condition = expression();
-        consume(RIGHT_PAREN, "Expect ')' after if condition.");
+        consume(RIGHT_PAREN, "Expect ')' after if condition."); // [parens]
+
         Stmt thenBranch = statement();
         Stmt elseBranch = null;
         if (match(ELSE)) {
             elseBranch = statement();
         }
+
         return new Stmt.If(condition, thenBranch, elseBranch);
     }
-
+    //< Control Flow if-statement
+//> Statements and State parse-print-statement
     private Stmt printStatement() {
         Expr value = expression();
         consume(SEMICOLON, "Expect ';' after value.");
-        //return new Stmt.Print(value);
-        return assignment();
+        return new Stmt.Print(value);
     }
-
+    //< Statements and State parse-print-statement
+//> Functions parse-return-statement
     private Stmt returnStatement() {
         Token keyword = previous();
         Expr value = null;
         if (!check(SEMICOLON)) {
             value = expression();
         }
+
         consume(SEMICOLON, "Expect ';' after return value.");
         return new Stmt.Return(keyword, value);
     }
-
+    //< Functions parse-return-statement
+//> Statements and State parse-var-declaration
     private Stmt varDeclaration() {
         Token name = consume(IDENTIFIER, "Expect variable name.");
+
         Expr initializer = null;
         if (match(EQUAL)) {
             initializer = expression();
         }
+
         consume(SEMICOLON, "Expect ';' after variable declaration.");
         return new Stmt.Var(name, initializer);
     }
-
+    //< Statements and State parse-var-declaration
+//> Control Flow while-statement
     private Stmt whileStatement() {
         consume(LEFT_PAREN, "Expect '(' after 'while'.");
         Expr condition = expression();
         consume(RIGHT_PAREN, "Expect ')' after condition.");
         Stmt body = statement();
+
         return new Stmt.While(condition, body);
     }
-
+    //< Control Flow while-statement
+//> Statements and State parse-expression-statement
     private Stmt expressionStatement() {
         Expr expr = expression();
         consume(SEMICOLON, "Expect ';' after expression.");
         return new Stmt.Expression(expr);
     }
-
-    private Stmt function(String kind) {
+    //< Statements and State parse-expression-statement
+//> Functions parse-function
+    private Stmt.Function function(String kind) {
         Token name = consume(IDENTIFIER, "Expect " + kind + " name.");
+//> parse-parameters
         consume(LEFT_PAREN, "Expect '(' after " + kind + " name.");
         List<Token> parameters = new ArrayList<>();
         if (!check(RIGHT_PAREN)) {
             do {
                 if (parameters.size() >= 255) {
-                    error(peek(), "Cannot have more than 255 parameters.");
+                    error(peek(), "Can't have more than 255 parameters.");
                 }
-                parameters.add(consume(IDENTIFIER, "Expect parameter name."));
+
+                parameters.add(
+                        consume(IDENTIFIER, "Expect parameter name."));
             } while (match(COMMA));
         }
         consume(RIGHT_PAREN, "Expect ')' after parameters.");
+//< parse-parameters
+//> parse-body
+
         consume(LEFT_BRACE, "Expect '{' before " + kind + " body.");
         List<Stmt> body = block();
         return new Stmt.Function(name, parameters, body);
+//< parse-body
     }
-
+    //< Functions parse-function
+//> Statements and State block
     private List<Stmt> block() {
         List<Stmt> statements = new ArrayList<>();
+
         while (!check(RIGHT_BRACE) && !isAtEnd()) {
             statements.add(declaration());
         }
+
         consume(RIGHT_BRACE, "Expect '}' after block.");
         return statements;
     }
-
+    //< Statements and State block
+//> Statements and State parse-assignment
     private Expr assignment() {
+/* Statements and State parse-assignment < Control Flow or-in-assignment
+    Expr expr = equality();
+*/
+//> Control Flow or-in-assignment
         Expr expr = or();
-        //Expr expr = equality(); cuidado isso pode causar problemas
+//< Control Flow or-in-assignment
+
         if (match(EQUAL)) {
             Token equals = previous();
             Expr value = assignment();
+
             if (expr instanceof Expr.Variable) {
-                Token name = ((Expr.Variable) expr).name;
+                Token name = ((Expr.Variable)expr).name;
                 return new Expr.Assign(name, value);
+//> Classes assign-set
             } else if (expr instanceof Expr.Get) {
-                Expr.Get get = (Expr.Get) expr;
+                Expr.Get get = (Expr.Get)expr;
                 return new Expr.Set(get.object, get.name, value);
+//< Classes assign-set
             }
-            error(equals, "Invalid assignment target.");
+
+            error(equals, "Invalid assignment target."); // [no-throw]
         }
+
         return expr;
     }
-
+    //< Statements and State parse-assignment
+//> Control Flow or
     private Expr or() {
         Expr expr = and();
+
         while (match(OR)) {
             Token operator = previous();
             Expr right = and();
             expr = new Expr.Logical(expr, operator, right);
         }
+
         return expr;
     }
-
+    //< Control Flow or
+//> Control Flow and
     private Expr and() {
         Expr expr = equality();
+
         while (match(AND)) {
             Token operator = previous();
             Expr right = equality();
             expr = new Expr.Logical(expr, operator, right);
         }
+
         return expr;
     }
-
-
-
+    //< Control Flow and
+//> equality
     private Expr equality() {
         Expr expr = comparison();
 
@@ -276,7 +359,8 @@ public class Parser {
 
         return expr;
     }
-
+    //< equality
+//> comparison
     private Expr comparison() {
         Expr expr = term();
 
@@ -288,7 +372,8 @@ public class Parser {
 
         return expr;
     }
-
+    //< comparison
+//> term
     private Expr term() {
         Expr expr = factor();
 
@@ -300,7 +385,8 @@ public class Parser {
 
         return expr;
     }
-
+    //< term
+//> factor
     private Expr factor() {
         Expr expr = unary();
 
@@ -312,7 +398,8 @@ public class Parser {
 
         return expr;
     }
-
+    //< factor
+//> unary
     private Expr unary() {
         if (match(BANG, MINUS)) {
             Token operator = previous();
@@ -320,42 +407,56 @@ public class Parser {
             return new Expr.Unary(operator, right);
         }
 
+/* Parsing Expressions unary < Functions unary-call
+    return primary();
+*/
+//> Functions unary-call
         return call();
+//< Functions unary-call
     }
-
+    //< unary
+//> Functions finish-call
     private Expr finishCall(Expr callee) {
         List<Expr> arguments = new ArrayList<>();
-        if(!check(RIGHT_PAREN)){
-            do{
+        if (!check(RIGHT_PAREN)) {
+            do {
+//> check-max-arity
                 if (arguments.size() >= 255) {
-                    error(peek(), "Cannot have more than 255 arguments.");
+                    error(peek(), "Can't have more than 255 arguments.");
                 }
+//< check-max-arity
                 arguments.add(expression());
             } while (match(COMMA));
         }
-        Token paren = consume(RIGHT_PAREN, "Expect ')' after arguments.");
+
+        Token paren = consume(RIGHT_PAREN,
+                "Expect ')' after arguments.");
+
         return new Expr.Call(callee, paren, arguments);
     }
-
-
+    //< Functions finish-call
+//> Functions call
     private Expr call() {
         Expr expr = primary();
-        while (true) {
+
+        while (true) { // [while-true]
             if (match(LEFT_PAREN)) {
                 expr = finishCall(expr);
+//> Classes parse-property
             } else if (match(DOT)) {
                 Token name = consume(IDENTIFIER,
                         "Expect property name after '.'.");
                 expr = new Expr.Get(expr, name);
+//< Classes parse-property
             } else {
                 break;
             }
         }
+
         return expr;
     }
-
-
-
+    //< Functions call
+//> primary
     private Expr primary() {
         if (match(FALSE)) return new Expr.Literal(false);
         if (match(TRUE)) return new Expr.Literal(true);
@@ -364,6 +465,7 @@ public class Parser {
         if (match(NUMBER, STRING)) {
             return new Expr.Literal(previous().literal);
         }
+//> Inheritance parse-super
 
         if (match(SUPER)) {
             Token keyword = previous();
@@ -372,47 +474,30 @@ public class Parser {
                     "Expect superclass method name.");
             return new Expr.Super(keyword, method);
         }
+//< Inheritance parse-super
+//> Classes parse-this
 
         if (match(THIS)) return new Expr.This(previous());
+//< Classes parse-this
+//> Statements and State parse-identifier
+
         if (match(IDENTIFIER)) {
             return new Expr.Variable(previous());
         }
-
+//< Statements and State parse-identifier
 
         if (match(LEFT_PAREN)) {
             Expr expr = expression();
             consume(RIGHT_PAREN, "Expect ')' after expression.");
             return new Expr.Grouping(expr);
         }
+//> primary-error
 
         throw error(peek(), "Expect expression.");
+//< primary-error
     }
-
-    //desafio comma
-    private Expr comma() {
-        Expr expr = equality();
-        while (match(COMMA)) {
-            Token operator = previous();
-            Expr right = equality(); // Or the appropriate method call depending on your grammar
-            expr = new Expr.Binary(expr, operator, right);
-        }
-        return expr;
-    }
-
-    //desafio comma
-    private Expr conditional() {
-        Expr expr = logicalOr(); // Assuming logicalOr() is a method that parses logical OR expressions
-        if (match(QUESTION_MARK)) {
-            Expr trueBranch = expression();
-            consume(COLON, "Expect ':' after expression.");
-            Expr falseBranch = conditional(); // Right associativity
-            expr = new Expr.Conditional(expr, trueBranch, falseBranch);
-        }
-        return expr;
-    }
-
-
-
+    //< primary
+//> match
     private boolean match(TokenType... types) {
         for (TokenType type : types) {
             if (check(type)) {
@@ -420,24 +505,30 @@ public class Parser {
                 return true;
             }
         }
+
         return false;
     }
-
+    //< match
+//> consume
     private Token consume(TokenType type, String message) {
         if (check(type)) return advance();
+
         throw error(peek(), message);
     }
-
+    //< consume
+//> check
     private boolean check(TokenType type) {
         if (isAtEnd()) return false;
         return peek().type == type;
     }
-
+    //< check
+//> advance
     private Token advance() {
         if (!isAtEnd()) current++;
         return previous();
     }
-
+    //< advance
+//> utils
     private boolean isAtEnd() {
         return peek().type == EOF;
     }
@@ -449,14 +540,14 @@ public class Parser {
     private Token previous() {
         return tokens.get(current - 1);
     }
-
+    //< utils
+//> error
     private ParseError error(Token token, String message) {
         Lox.error(token, message);
         return new ParseError();
     }
-
-
-
+    //< error
+//> synchronize
     private void synchronize() {
         advance();
 
@@ -478,6 +569,5 @@ public class Parser {
             advance();
         }
     }
-
-
+//< synchronize
 }
